<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32dp"
    tools:context=".SharedPrefActivity">

    <EditText
        android:id="@+id/ed_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:hint="@string/ed_data"
        android:inputType="text"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/ed_data"
        app:layout_constraintStart_toStartOf="@+id/ed_data"
        app:layout_constraintTop_toBottomOf="@+id/ed_data" />

    <Button
        android:id="@+id/btn_save_encrypted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save_encrypted"
        app:layout_constraintEnd_toEndOf="@+id/ed_data"
        app:layout_constraintStart_toStartOf="@+id/ed_data"
        app:layout_constraintTop_toBottomOf="@+id/btn_save" />

    <TextView
        android:id="@+id/tv_stored_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/stored_values"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_encrypted" />

    <TextView
        android:id="@+id/tv_normal_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_stored_values"
        tools:text="@string/value_x" />

    <TextView
        android:id="@+id/tv_encrypted_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_normal_value"
        tools:text="@string/value_encrypted_x" />

</androidx.constraintlayout.widget.ConstraintLayout>