<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32dp"
    tools:context=".FileActivity">

    <EditText
        android:id="@+id/ed_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_any_value"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:autofillHints="@string/enter_any_value" />

    <Button
        android:id="@+id/btn_save_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_file"
        app:layout_constraintStart_toStartOf="@+id/ed_data"
        app:layout_constraintTop_toBottomOf="@+id/ed_data" />

    <Button
        android:id="@+id/btn_save_file_encrypted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_file_encrypted"
        app:layout_constraintEnd_toEndOf="@+id/ed_data"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_save_file"
        app:layout_constraintTop_toTopOf="@+id/btn_save_file" />

    <Button
        android:id="@+id/btn_read_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/read_file"
        app:layout_constraintEnd_toEndOf="@+id/ed_data"
        app:layout_constraintStart_toStartOf="@+id/ed_data"
        app:layout_constraintTop_toBottomOf="@+id/btn_save_file" />

    <Button
        android:id="@+id/btn_show_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/show_content"
        app:layout_constraintEnd_toEndOf="@+id/ed_data"
        app:layout_constraintStart_toStartOf="@+id/ed_data"
        app:layout_constraintTop_toBottomOf="@+id/btn_read_file" />

    <Button
        android:id="@+id/btn_read_file_encrypted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/read_file_encrypted"
        app:layout_constraintEnd_toEndOf="@+id/ed_data"
        app:layout_constraintStart_toStartOf="@+id/ed_data"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_content" />

    <TextView
        android:id="@+id/tv_stored_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/stored_values"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_read_file_encrypted" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_stored_values" />
</androidx.constraintlayout.widget.ConstraintLayout>